# projects_backend_database

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  README.md  diesel.toml
.cargo/: config.aarch64.toml  config.toml
api/: Cargo.toml
api/src/: auth_handler.rs  education_handler.rs  frameworks_handler.rs  languages_handler.rs  lib.rs  openapi.rs  portfolio_projects_handler.rs  realtime.rs  resume_handler.rs  skills_handler.rs  work_experiences_handler.rs  ws_handler.rs
api/src/auth/: mod.rs
api/src/route_handlers/resume/: education_handler.rs  frameworks_handler.rs  languages_handler.rs  mod.rs  portfolio_projects_handler.rs  resume_handler.rs  skills_handler.rs  work_experiences_handler.rs
api/tests/: auth_persistence_test.rs  openapi_test.rs  realtime_resume_changed_test.rs  resume_persistence_test.rs  resume_visibility_authz_test.rs
api/tests/support/: mod.rs
application/: Cargo.toml
application/src/: error.rs  lib.rs
application/src/auth/: login.rs  logout.rs  me.rs  register.rs
application/src/resume/: common.rs  create.rs  delete.rs  mod.rs  read.rs  update.rs
application/src/resume/education/: create.rs  delete.rs  read.rs  update.rs
application/src/resume/frameworks/: create.rs  delete.rs  read.rs  update.rs
application/src/resume/languages/: create.rs  delete.rs  read.rs  update.rs
application/src/resume/portfolio_projects/: create.rs  delete.rs  read.rs  update.rs
application/src/resume/skills/: create.rs  delete.rs  read.rs  update.rs
application/src/resume/work_experiences/: create.rs  delete.rs  read.rs  update.rs
domain/: Cargo.toml
domain/src/: models.rs  schema.rs
domain/src/models/: auth.rs  education.rs  frameworks.rs  languages.rs  portfolio.rs  resume.rs  skills.rs  work_experience.rs
infrastructure/: Cargo.toml  diesel.toml
infrastructure/migrations/2025-10-19-050025-0000_create_resumes/: down.sql  up.sql
infrastructure/migrations/2025-10-26-000000-0001_create_auth_tables/: down.sql  up.sql
infrastructure/migrations/2025-12-13-220800-0002_add_resumes_is_public/: down.sql  up.sql
infrastructure/migrations/2026-01-22-0004_make_education_degree_nullable/: down.sql  up.sql
infrastructure/migrations/2026-02-22-0005_make_work_experiences_company_name_nullable/: down.sql  up.sql
infrastructure/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs  node_config.rs  response_models.rs
src/: main.rs  schema.rs
