[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
shared = { path = "../shared" }

rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

utoipa = { version = "5", features = ["rocket_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["rocket", "vendored"] }

[dev-dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.2", features = ["postgres", "uuid"] }
infrastructure = { path = "../infrastructure" }
