[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
shared = { path = "../shared" }

rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
ws = { package = "rocket_ws", version = "0.1.1" }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
fern = "0.7.1"
log = "0.4.28"
strip-ansi-escapes = "0.2.1"

utoipa = { version = "5", features = ["rocket_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["rocket", "vendored"] }
humantime = "2.3.0"

[dev-dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.2", features = ["postgres", "uuid"] }
diesel_migrations = "2.3.0"
infrastructure = { path = "../infrastructure" }
futures-util = "0.3.31"
tokio-tungstenite = "0.28.0"
