[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.2", features = ["postgres"] }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0.145"
shared = { path = "../shared" }

