[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.2", features = ["postgres", "uuid"] }
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0.145"
shared = { path = "../shared" }
argon2 = "0.5.3"
rand_core = "0.6.4"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }

