[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.2", features = ["chrono", "postgres", "uuid"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
